apps/test-rom/base/test-rom-deploy.yaml
---
# create deployment for test-rom
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: test-rom
  namespace: test-rom
  labels:
    app: test-rom
    version: 0.0.1
    backstage.io/kubernetes-id: test-rom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-rom
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: test-rom
        version: 0.0.1
        backstage.io/kubernetes-id: test-rom
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"        
    spec:
      containers:
      - name: test-rom
        image: diegoluisi/test-rom:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
