apps/test-rom/base/test-rom-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-rom-vs
  namespace: test-rom
  labels:
    app: test-rom
    version: 0.0.1
    backstage.io/kubernetes-id: test-rom
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - test-rom.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: test-rom-svc
      weight: 100
